# sippycup

./: LICENSE  README.md  pyproject.toml  sc  setup.py
sippycup/: digest.py  response_parser.py  utils.py
sippycup/instructions_runner/: instructions_runner.py  tls_instructions_runner.py  udp_instructions_runner.py
sippycup/sip_payload/: sip_payload.py  tls_invite_payload.py  tls_register_payload.py  udp_invite_payload.py  udp_options_payload.py  udp_register_payload.py
