[tool.poetry]
name = "sippycup"
version = "0.1.0"
description = ""
authors = ["Jake Robers <jacob.robers@podium.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
